--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,21 @@ h3 {
   opacity: 0.7;
 }
 
+@media (max-width: 900px) {
+  h1 {
+    font-size: 48px;
+    line-height: 1.5;
+  }
+
+  h2 {
+    font-size: 36px;
+  }
+
+  h3 {
+    font-size: 22px;
+  }
+}
+
 p {
   padding: 20px;
   border-radius: 4px;
